# master_thesis

./: .gitattributes  .gitignore  LICENSE.md  ceft+pqcd.ipynb  classes.ipynb  constraining_pqcd.ipynb  dickandballs.py  environment.yaml  gen.sh  generate_samples.ipynb  hebeler.ipynb  helpers.py  new.ipynb  pqcd.ipynb  readme.md  sample_analysis.ipynb  samples.py  samples.toml  testruns.py  tov_nobreak  trial.ipynb
TOV/: Cargo.toml
TOV/src/: dorpi5.rs  main.rs  npyfiles.rs  sort.rs  tov.rs  tov.toml
TOV/src/dorpi5/: dp_coeffs.rs  dp_helpers.rs
TOV/src/tov/: tov_helpers.rs  tov_setup.rs  tov_solvers.rs
analysis/: create_dats.py  gen_eos_analysis.ipynb  max_likelihood.py  post_anal.py  test.ipynb  tov_viewer.ipynb
analysis/heavy_pulsars/: eos_inference_NICERJ0030.py  eos_inference_NICERJ0740.py  eos_inference_PSRJ0740_radio_timing.py  eos_inference_PSRJ1614_radio_timing.py
analysis/injections/: bns.prior  run_injection.py
gpr/: anal_helpers.py  append_results.py  config.py  constants.py  constrain_on_chempot.py  constrainedgp.py  environment.yaml  eos.py  finitedimensionalgp.py  gaussianprocess.py  generate.py  helpers.py  interactive_plot.py  kernels.py  prepare_ceft.py  prepare_pqcd.py  samples.py  samples.toml  sampling.py  tmg_samplers.py  validate_samples.py  virtobs.py  virtobs2.py
gpr/notebooks/: bounded_gp.ipynb  ceft+pqcd.ipynb  cheft.ipynb  fdgp2.ipynb  gen_weight_file.ipynb  integrated_basis_fns.ipynb  investigate_marginalisation.ipynb  invstgt_20ns_xtnsn.ipynb  invstgt_wrd_phs_trns.ipynb  (+12 more)
tmg_hmc/: Cargo.toml  pyproject.toml  readme.md
(+163 files in other folders)
